--- a/build.gradle
+++ b/build.gradle
@@ -53,6 +53,9 @@ dependencies {
     //Additional library
     implementation group: 'org.apache.commons', name: 'commons-dbcp2', version: '2.12.0'
 
+    //Faker library
+    implementation 'com.github.javafaker:javafaker:1.0.2'
+
 }
 
 tasks.named('test') {
