--- a/serenity.properties
+++ b/serenity.properties
@@ -1,2 +1,8 @@
 serenity.report.encoding = UTF-8
 webdriver.base.url=https://couriersync-app.vercel.app/
+webdriver.driver=chrome
+webdriver.autodownload=true
+webdriver.timeouts.implicitlywait=30000
+webdriver.wait.for.timeout=30000
+serenity.timeout=30000
+serenity.driver.capabilities="goog:chromeOptions.args=[--remote-allow-origins=*,--start-maximized,--no-sandbox,--disable-dev-shm-usage]"
